<resources>
    <string name="app_name">YT Music</string>
    <!--BottomMenu-->
    <string name="home" translatable="false">Home</string>
    <string name="explore" translatable="false">Explore</string>
    <string name="library" translatable="false">Library</string>
    <string name="upgrade" translatable="false">Upgrade</string>
    <!--Principal-->
    <string name="music" translatable="false">Music</string>
    <string name="listen_again" translatable="false">Listen again</string>
    <string name="more" translatable="false">MORE</string>
    <string name="start_radio" translatable="false">START RADIO FROM A SONG</string>
    <string name="quick_picks" translatable="false">Quick picks</string>
</resources>