<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imgv_logo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ytmusicicon" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cimgv_photo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/perfil"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/music"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgv_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibtn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/cimgv_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_etiquetas"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <ImageButton
            android:id="@+id/ibtn_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/ibtn_search"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cast"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_listen_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/listen_again"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_etiquetas" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:text="@string/more"
            android:textColor="@color/gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_etiquetas" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_music"
            android:layout_width="407dp"
            android:layout_height="324dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_listen_again" />

        <TextView
            android:id="@+id/tv_start_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/start_radio"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_music" />

        <TextView
            android:id="@+id/tv_quick_picks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/quick_picks"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_radio" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_quick_picks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_quick_picks" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#212121"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottommenu" />

</androidx.constraintlayout.widget.ConstraintLayout>